refactor(etl): extract aggregation audit & materialization into dedicated flows; add custom advice; simplify core orchestrator  - Moved audit logic into EtlAggregationAuditFlowConfig - Moved materialization trigger logic into EtlMaterializationFlowConfig - Added dedicated EtlAggregationResultHandlerAdvice (advice-based error handling) - Removed inline instanceof / branching from orchestration result handler - Replaced sequential audit→materialization execution with DSL-driven parallel gateway flows - Aligned flow structure with BaseIntegrationFlowDefinition (payload-router, strict headers usage) - Simplified orchestration result mapping and removed obsolete code paths - Ensured requestId propagation from headers for audit/materialization - Improved readability, reduced side-effects in core flow, no direct channel sends